Fix bug 181454 -- endless opening of new windows when another app tells Mozilla to open a new window, via Apple Events. Make sure we return noErr when we've handled the event.  r=ccarlen, sr=jag, a=asa.